tests/ui/fail/alternate_writes_raw.stderr
error[E0382]: use of moved value: `token`
  --> tests/ui/fail/alternate_writes_raw.rs:10:21
   |
5  |     value.borrow_mut(|x, token| {
   |                          ----- move occurs because `token` has type `Token<'_, i32>`, which does not implement the `Copy` trait
...
9  |         *y.activate(token) += 1;
   |                     ----- value moved here
10 |         *z.activate(token) += 1;
   |                     ^^^^^ value used here after move
